# get_price_bot

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  products.db  pyproject.toml
get_price_bot/: bot.py  db.py  parser.py  utils.py
